{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 500,
  "lineage": "14024913-ee01-8916-d024-c0099270f6ba",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:355838834770:security-group/sg-0d5cf54c639017a08",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0d5cf54c639017a08",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ea02d23480cce1e3",
            "domain": "vpc",
            "id": "eipalloc-0cbed468149fd2814",
            "network_interface": "eni-0cf4d79aed4bc0ad1",
            "private_dns": "ip-20-10-11-47.eu-west-1.compute.internal",
            "private_ip": "20.10.11.47",
            "public_dns": "ec2-54-228-148-20.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.228.148.20",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0433623f513b8d630",
            "owner_id": "355838834770",
            "tags": {
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cbed468149fd2814",
            "id": "nat-07241cfa2ab46ecd1",
            "network_interface_id": "eni-0e165ebd6db8eff81",
            "private_ip": "20.10.3.153",
            "public_ip": "54.228.148.20",
            "subnet_id": "subnet-0af44095ccf2db728",
            "tags": {
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c6db09c748ec074a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-07241cfa2ab46ecd1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c6db09c748ec074a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0433623f513b8d630",
            "id": "r-rtb-0a428e2cb2abeaf781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a428e2cb2abeaf78",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ba9757a48fe7ca05",
            "owner_id": "355838834770",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "infra-rt",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c6db09c748ec074a",
            "owner_id": "355838834770",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-07ee88a6243003236",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "private-rt",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a428e2cb2abeaf78",
            "owner_id": "355838834770",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0433623f513b8d630",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "public-rt",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000c7b64bfed0b116",
            "route_table_id": "rtb-0ba9757a48fe7ca05",
            "subnet_id": "subnet-02ba8d30b9b0798fe"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043bc125413219077",
            "route_table_id": "rtb-0ba9757a48fe7ca05",
            "subnet_id": "subnet-049d87cdd07ace640"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045c21ca3dcfdf2bc",
            "route_table_id": "rtb-0c6db09c748ec074a",
            "subnet_id": "subnet-02c2546cb403651c7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ab296eade700f35",
            "route_table_id": "rtb-0c6db09c748ec074a",
            "subnet_id": "subnet-0dd4b91dde1c08241"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9c3e9e8d2c34aa9",
            "route_table_id": "rtb-0a428e2cb2abeaf78",
            "subnet_id": "subnet-0af44095ccf2db728"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa904616f84082d",
            "route_table_id": "rtb-0a428e2cb2abeaf78",
            "subnet_id": "subnet-0323fb1d1c502a185"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:355838834770:subnet/subnet-02ba8d30b9b0798fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "20.10.5.0/24",
            "id": "subnet-02ba8d30b9b0798fe",
            "map_public_ip_on_launch": false,
            "owner_id": "355838834770",
            "tags": {
              "Environment": "prod",
              "Name": "infra-subnet",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:355838834770:subnet/subnet-049d87cdd07ace640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "20.10.6.0/24",
            "id": "subnet-049d87cdd07ace640",
            "map_public_ip_on_launch": false,
            "owner_id": "355838834770",
            "tags": {
              "Environment": "prod",
              "Name": "infra-subnet",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:355838834770:subnet/subnet-02c2546cb403651c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "20.10.1.0/24",
            "id": "subnet-02c2546cb403651c7",
            "map_public_ip_on_launch": false,
            "owner_id": "355838834770",
            "tags": {
              "Environment": "prod",
              "Name": "private-subnet",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:355838834770:subnet/subnet-0dd4b91dde1c08241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "20.10.2.0/24",
            "id": "subnet-0dd4b91dde1c08241",
            "map_public_ip_on_launch": false,
            "owner_id": "355838834770",
            "tags": {
              "Environment": "prod",
              "Name": "private-subnet",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:355838834770:subnet/subnet-0af44095ccf2db728",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "20.10.3.0/24",
            "id": "subnet-0af44095ccf2db728",
            "map_public_ip_on_launch": true,
            "owner_id": "355838834770",
            "tags": {
              "Environment": "prod",
              "Name": "public-subnet",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:355838834770:subnet/subnet-0323fb1d1c502a185",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "20.10.4.0/24",
            "id": "subnet-0323fb1d1c502a185",
            "map_public_ip_on_launch": true,
            "owner_id": "355838834770",
            "tags": {
              "Environment": "prod",
              "Name": "public-subnet",
              "Owner": "aws@cilicianpirates.co.uk"
            },
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:355838834770:vpc/vpc-0ca7ff00a58993c0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.10.0.0/16",
            "default_network_acl_id": "acl-0af1eca9d41688061",
            "default_route_table_id": "rtb-0e4e5b6d6d18f3051",
            "default_security_group_id": "sg-0d5cf54c639017a08",
            "dhcp_options_id": "dopt-022a60de3d184ba4f",
            "enable_classiclink": true,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ca7ff00a58993c0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e4e5b6d6d18f3051",
            "owner_id": "355838834770",
            "tags": {
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "apigw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appmesh_envoy_management",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "appstream",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "athena",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloud_directory",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudformation",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudtrail",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "config",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.94.5.0/24",
              "52.119.240.0/21",
              "52.94.24.0/23"
            ],
            "id": "vpce-0f523a1be629861a5",
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a428e2cb2abeaf78",
              "rtb-0ba9757a48fe7ca05",
              "rtb-0c6db09c748ec074a"
            ],
            "service_name": "com.amazonaws.eu-west-1.dynamodb",
            "state": "available",
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-00ee98b3b8223afa9-tcos6jtl.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-00ee98b3b8223afa9-tcos6jtl-eu-west-1b.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-00ee98b3b8223afa9-tcos6jtl-eu-west-1a.ec2.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ec2.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05198752CEUX6JZNRT1Y"
              }
            ],
            "id": "vpce-00ee98b3b8223afa9",
            "network_interface_ids": [
              "eni-0335117c2e4b8a61e",
              "eni-0eb04a8726478de90"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_autoscaling",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-00c51bbc4f635b4a6-x449xorv.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-00c51bbc4f635b4a6-x449xorv-eu-west-1b.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-00c51bbc4f635b4a6-x449xorv-eu-west-1a.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ec2messages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03559161YGSQFOCK0B3V"
              }
            ],
            "id": "vpce-00c51bbc4f635b4a6",
            "network_interface_ids": [
              "eni-0c72cc9993b69a885",
              "eni-0d79e055bf3003ac2"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-056de2a7146132b5c-4t5fmn2d.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-056de2a7146132b5c-4t5fmn2d-eu-west-1b.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-056de2a7146132b5c-4t5fmn2d-eu-west-1a.api.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "api.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z03317993RRY57YG0G82U"
              }
            ],
            "id": "vpce-056de2a7146132b5c",
            "network_interface_ids": [
              "eni-03303074189ddb9e9",
              "eni-0bb22a4393557a1d3"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-07f72994f65a55806-zj1ddnza.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-07f72994f65a55806-zj1ddnza-eu-west-1b.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-07f72994f65a55806-zj1ddnza-eu-west-1a.dkr.ecr.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z04022093TS646F6EE28C"
              },
              {
                "dns_name": "*.dkr.ecr.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z04022093TS646F6EE28C"
              }
            ],
            "id": "vpce-07f72994f65a55806",
            "network_interface_ids": [
              "eni-0ca67c995c35257b5",
              "eni-0eb29da5431c126fe"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0f1c146ef099eebc8-d3sg8kpv.ecs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f1c146ef099eebc8-d3sg8kpv-eu-west-1b.ecs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f1c146ef099eebc8-d3sg8kpv-eu-west-1a.ecs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ecs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05194363FJ0UGZL1JJ6D"
              }
            ],
            "id": "vpce-0f1c146ef099eebc8",
            "network_interface_ids": [
              "eni-0912f840cb6f7693b",
              "eni-0ee3963ea988f9506"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecs",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0ce64c540cb47cdc7-tiwbw2j2.ecs-t.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0ce64c540cb47cdc7-tiwbw2j2-eu-west-1b.ecs-t.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0ce64c540cb47cdc7-tiwbw2j2-eu-west-1a.ecs-t.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ecs-t.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05199002NPX4H2U4T085"
              }
            ],
            "id": "vpce-0ce64c540cb47cdc7",
            "network_interface_ids": [
              "eni-055367c58e941421e",
              "eni-0c393752d31e03778"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.ecs-telemetry",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "efs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "elasticloadbalancing",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git_codecommit",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "glue",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_firehose",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kinesis_streams",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0628390514539ef1a-z4dx6aju.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0628390514539ef1a-z4dx6aju-eu-west-1b.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0628390514539ef1a-z4dx6aju-eu-west-1a.kms.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "kms.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0409094A5N00DMFL60A"
              }
            ],
            "id": "vpce-0628390514539ef1a",
            "network_interface_ids": [
              "eni-04c959d2fb9281b3a",
              "eni-09bc6cc063563da43"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "monitoring",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "rekognition",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "52.218.0.0/17"
            ],
            "id": "vpce-0fa19819db44fb7c4",
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a428e2cb2abeaf78",
              "rtb-0ba9757a48fe7ca05",
              "rtb-0c6db09c748ec074a"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_api",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_notebook",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sagemaker_runtime",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-038d7d290fd74f25a-dymm15nh.sqs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-038d7d290fd74f25a-dymm15nh-eu-west-1b.sqs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-038d7d290fd74f25a-dymm15nh-eu-west-1a.sqs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "sqs.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0355914356GVH8UYTFTZ"
              }
            ],
            "id": "vpce-038d7d290fd74f25a",
            "network_interface_ids": [
              "eni-05bc46a8fd92c903b",
              "eni-0bcaae27cda92c626"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.sqs",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-083b98eb1e910fb71-pnccxwtf.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-083b98eb1e910fb71-pnccxwtf-eu-west-1b.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-083b98eb1e910fb71-pnccxwtf-eu-west-1a.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssm.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z04091502KEQOEJ6N4NCR"
              }
            ],
            "id": "vpce-083b98eb1e910fb71",
            "network_interface_ids": [
              "eni-03b0739fcd5337509",
              "eni-04fd4c25f31aab6ee"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "dns_entry": [
              {
                "dns_name": "vpce-0f49be132ca9f5f59-yd4lnk7l.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f49be132ca9f5f59-yd4lnk7l-eu-west-1b.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0f49be132ca9f5f59-yd4lnk7l-eu-west-1a.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssmmessages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0519888JO50K0Z9HKF9"
              }
            ],
            "id": "vpce-0f49be132ca9f5f59",
            "network_interface_ids": [
              "eni-04cb68b6d12ce2931",
              "eni-05f67f9ecf698d561"
            ],
            "owner_id": "355838834770",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d5cf54c639017a08"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-02c2546cb403651c7",
              "subnet-0dd4b91dde1c08241"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "prod",
              "Name": "Pirates VPC",
              "Owner": "aws@cilicianpirates.co.uk",
              "Project": "PirateEndpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ca7ff00a58993c0d"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "storagegateway",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transfer",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "transferserver",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}